feat: Rename application to CommitFit
- Update main app title from 'GitHub Candidate Match MVP' to 'CommitFit'
- Update HTML title and meta description
- Update API title and welcome message
- Update README.md title
- Update frontend package.json name
- Maintain all functionality while rebranding to CommitFit

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="GitHub Candidate Match MVP - Analyze GitHub profiles and match them with job requirements"
+      content="CommitFit - Analyze GitHub profiles and match them with job requirements"
     />
-    <title>GitHub Candidate Match MVP</title>
+    <title>CommitFit</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
